src/main/java/com/example/library_application/task1_srp/errors/exeptions/RightsException.java
package com.example.library_application.task1_srp.errors.exeptions;

public class RightsException extends RuntimeException{
    public RightsException(String message) {
        super(message);
    }
}
